nst/src/snapshots/transmute_nst__exit_points_resolver__tests__nested_function.snap
---
source: nst/src/exit_points_resolver.rs
expression: "(ast, block_exit_points)"
---
(
    Ast {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "f",
            IdentId(2) => "g",
        ],
        identifier_refs: [],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Boolean(true),
                        span: 4:17; [49, 53],
                    },
                ),
                span: 4:17; [49, 53],
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: Block(
                    [
                        StmtId(1),
                    ],
                ),
                span: 3:17; [31, 64],
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: Literal(
                    Literal {
                        kind: Number(1),
                        span: 6:13; [78, 79],
                    },
                ),
                span: 6:13; [78, 79],
            },
            ExprId(3) => Expression {
                id: ExprId(3),
                kind: Block(
                    [
                        StmtId(2),
                        StmtId(3),
                    ],
                ),
                span: 2:13; [13, 86],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                    },
                    InputId(0),
                    [
                        StmtId(4),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Ret(
                    Some(
                        ExprId(0),
                    ),
                    Explicit,
                ),
                span: 4:13; [45, 54],
            },
            StmtId(2) => Statement {
                id: StmtId(2),
                kind: LetFn(
                    Identifier {
                        id: IdentId(2),
                        span: 3:13; [27, 28],
                    },
                    [],
                    [],
                    Return {
                        type_def_id: None,
                    },
                    ExprId(1),
                ),
                span: 3:9; [23, 64],
            },
            StmtId(3) => Statement {
                id: StmtId(3),
                kind: Ret(
                    Some(
                        ExprId(2),
                    ),
                    Explicit,
                ),
                span: 6:9; [74, 80],
            },
            StmtId(4) => Statement {
                id: StmtId(4),
                kind: LetFn(
                    Identifier {
                        id: IdentId(1),
                        span: 2:9; [9, 10],
                    },
                    [],
                    [],
                    Return {
                        type_def_id: None,
                    },
                    ExprId(3),
                ),
                span: 2:5; [5, 86],
            },
        ],
        type_defs: [],
        root: StmtId(0),
    },
    [
        (
            ExprId(1),
            Output {
                exit_points: [
                    Explicit(
                        Some(
                            ExprId(0),
                        ),
                    ),
                ],
                unreachable: [],
            },
        ),
        (
            ExprId(3),
            Output {
                exit_points: [
                    Explicit(
                        Some(
                            ExprId(2),
                        ),
                    ),
                ],
                unreachable: [],
            },
        ),
    ],
)
